Finished / Fix
fixed the white space at the bottom

--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: rgb(0, 0, 0);
     color: azure;
+    margin-top: -3%;
 }
 
 
@@ -8,7 +9,8 @@ body{
 background-color: rgb(3, 3, 3);
 color: azure;
 position: relative;
-bottom: 30px;
+bottom: -70px;
+height: 750px;
 }
 
 .container-h button{
@@ -45,6 +47,7 @@ padding-top: 50px;
 margin: 100px;
 margin-left: 490px;
 width: 350px;
+height: 250px;
 position: relative;
 bottom: -10px;
 }
@@ -100,7 +103,8 @@ bottom: -10px;
 background-color: rgb(0, 0, 0);
 margin-bottom: 0px;
 position: relative;
-top: -350px;
+top: 65px;
+height: 550px;
 }
 
 .container-2 h1{
@@ -195,10 +199,9 @@ top: -350px;
 
 .container-3{
     background-color: rgb(6, 6, 6);
-    height: 500px;
+    height: 420px;
     position: relative;
-    bottom: 470px;
-    
+    bottom: -50px;
 }
 
 .container-3 p{
@@ -236,8 +239,8 @@ span.thor{
     position: relative;
     display: flex;
     justify-content: center;
-    bottom: 600px;
-    padding: 70px;  
+    top: -0px;
+    padding: 10px;  
 
 
 }
@@ -278,11 +281,16 @@ span.thor{
     color: #ff0048;
 }
 
-
 .container-5 p{
-border: 1px solid red;
-
+    background-color: rgb(0, 0, 0);
 }
+
+.container-5 p:hover{
+    color: #ff0048;
+}
+
+
+
 
 
 
